JumpScript/tests/baselines/reference/duplicateVarAndImport2.errors.txt
tests/cases/compiler/duplicateVarAndImport2.jump(4,1): error TS2440: Import declaration conflicts with local declaration of 'a'.


==== tests/cases/compiler/duplicateVarAndImport2.jump (1 errors) ====
    // error since module is instantiated
    var a;
    module M { export var x = 1; }
    import a = M;
    ~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'a'.